# identity-risk-agent

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.streamlit  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: feature_refresh.py  model_retrain.py
api/: __init__.py  main.py
data/: .gitkeep
docs/adrs/: 001-feature-store.md  002-llm-provider.md  003-multi-tenant.md  004-agent-runtime.md  005-privacy.md  006-testing.md
feature_store/: .gitignore  feature_store.yaml  features.py
models/: .gitkeep
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml  risk-agent-dashboard.json
notebooks/: 01_generate_data.ipynb  02_features.ipynb  03_genai_agent.ipynb  03_train_model.ipynb  04_feature_store.ipynb  05_mlflow.ipynb
src/: __init__.py  resilience.py
src/agents/: __init__.py  agent.py  rag.py  vector_store.py
src/core/: __init__.py  data_generator.py  multi_tenant.py
src/features/: __init__.py  feast_store.py  feature_engineering.py
src/infra/: __init__.py
src/models/: __init__.py  mlflow_tracking.py  risk_model.py
src/privacy/: __init__.py  pii_detector.py
src/tools/: __init__.py  quarantine.py  risk_score.py  user_history.py
tests/: __init__.py  test_phase3_agents.py
tests/test_api/: test_main.py
tests/test_data/: .gitkeep  test_features.py  test_generator.py
tests/test_extensions/: .gitkeep
tests/test_models/: .gitkeep  test_risk_model.py
ui/: app.py
(+1 files in other folders)
